--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "code/api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node core/app.js"
+    "start": "node core/api.js"
   },
   "author": "Jeffrey Meesters",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "basic-auth": "^2.0.1",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mysql2": "^1.6.4",
     "sequelize": "^4.42.0",
