--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0"
